--- a/MyMBTI-main/start/css/main.css
+++ b/MyMBTI-main/start/css/main.css
@@ -1,6 +1,10 @@
 #main{
-    background-color:lawngreen;
+    background-color:whitesmoke;
     width: 80%;
     text-align: center;
     border-radius: 20px;
+}
+
+p{
+    font-size: 1.2rem;
 }
